<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.auth.signin.SigninFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="26dp"
    android:layout_marginTop="24dp"
    android:orientation="vertical">

        <TextView
            style="@style/TextView.PoppinsNormal16spblack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_no" />
        <EditText
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:padding="10dp"
            android:layout_marginTop="6dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_phone_number"
            android:autofillHints=""
            android:inputType="text" />
        <TextView
            style="@style/TextView.PoppinsNormal16spblack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address" />
        <EditText
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:padding="10dp"
            android:layout_marginTop="6dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_address"
            android:autofillHints=""
            android:inputType="text" />
        <TextView
            style="@style/TextView.PoppinsNormal16spblack"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_no" />
        <EditText
            android:inputType="text"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:padding="10dp"
            android:layout_marginTop="6dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_house_number"
            android:importantForAutofill="no" />
        <TextView
            style="@style/TextView.PoppinsNormal16spblack"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />
        <EditText
            android:inputType="text"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:padding="10dp"
            android:layout_marginTop="6dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_your_city"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/btnSignUpNow"
            style="@style/Button.PrimaryPoppinsNormal14sp"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>